--- a/src/components/message/message.css
+++ b/src/components/message/message.css
@@ -2,6 +2,7 @@
     min-width: 10em;
     max-width: 30%;
     margin-right: 1em;
+    border-radius: 10px !important;
 }
 
 .message {
