--- a/src/components/pages/pages.css
+++ b/src/components/pages/pages.css
@@ -1,7 +1,7 @@
-.admin-board {
+.message-board {
     display: flex;
     justify-content: space-between;
-    max-height: 80%;
+    max-height: 85vh;
 }
 
 .admin-board-container {
